--- a/AIpaca_App/AIpaca_App.csproj
+++ b/AIpaca_App/AIpaca_App.csproj
@@ -62,6 +62,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Properties\ApiConfig.xml" />
 	  <None Remove="Resources\AppIcon\icon_aipaca.png" />
 	  <None Remove="Resources\data\AchieveList.xml" />
 	  <None Remove="Resources\drawable\icon_aipaca.png" />
@@ -77,6 +78,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <EmbeddedResource Include="Resources\Config\ApiConfig.xml">
+	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+	  </EmbeddedResource>
+	</ItemGroup>
+
+	<ItemGroup>
 	  <EmbeddedResource Include="Resources\data\AchieveList.xml" />
 	</ItemGroup>
 
@@ -86,6 +93,7 @@
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.14" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
+		<PackageReference Include="System.Reflection" Version="4.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -105,6 +113,9 @@
 
 	<ItemGroup>
 	  <MauiXaml Update="Resources\Splash\SplashPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Account\SignupPagePopup.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\ChallengePage.xaml">
