--- a/AIpaca_App/AIpaca_App.csproj
+++ b/AIpaca_App/AIpaca_App.csproj
@@ -64,6 +64,7 @@
 	<ItemGroup>
 	  <None Remove="Properties\ApiConfig.xml" />
 	  <None Remove="Resources\AppIcon\icon_aipaca.png" />
+	  <None Remove="Resources\Config\ApiConfig.xml" />
 	  <None Remove="Resources\data\AchieveList.xml" />
 	  <None Remove="Resources\drawable\icon_aipaca.png" />
 	  <None Remove="Resources\Images\icon_right_arrow.png" />
