스프레쉬 화면의 알람을 팝업페이지로 출력
DisplayAlert가 앱 내부의 다크모드와 호환이 되지않아 스플래쉬 화면의 업데이트 알림을 출력하기 위해 팝업페이지를 제작함
해당 팝업 페이지는 재사용이 가능하도록 작성되어 DisplayAlert를 대체하여 사용할 수 있음

--- a/AIpaca_App/AIpaca_App.csproj
+++ b/AIpaca_App/AIpaca_App.csproj
@@ -122,6 +122,9 @@
 	    <AutoGen>True</AutoGen>
 	    <DependentUpon>AppResources.resx</DependentUpon>
 	  </Compile>
+	  <Compile Update="Resources\Splash\SplashPopup.xaml.cs">
+	    <DependentUpon>SplashPopup.xaml</DependentUpon>
+	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -132,6 +135,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Resources\Splash\SplashPopup.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Resources\Splash\SplashPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
