displayalert를 팝업으로 추가 변경 및 최적화
SplashPopup의 이름을 AlertPopup으로 변경
displayalert으로 작성된 알림을 모두 AlertPopup으로 변경
AlertPopup의 버튼 위치를 HorizontalStackLayout 에서 Grid 로 변경

--- a/AIpaca_App/AIpaca_App.csproj
+++ b/AIpaca_App/AIpaca_App.csproj
@@ -122,8 +122,8 @@
 	    <AutoGen>True</AutoGen>
 	    <DependentUpon>AppResources.resx</DependentUpon>
 	  </Compile>
-	  <Compile Update="Resources\Splash\SplashPopup.xaml.cs">
-	    <DependentUpon>SplashPopup.xaml</DependentUpon>
+	  <Compile Update="Views\AlertPopup.xaml.cs">
+	    <DependentUpon>AlertPopup.xaml</DependentUpon>
 	  </Compile>
 	</ItemGroup>
 
@@ -135,7 +135,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="Resources\Splash\SplashPopup.xaml">
+	  <MauiXaml Update="Views\AlertPopup.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Resources\Splash\SplashPage.xaml">
