--- a/AIpaca_App/AIpaca_App.csproj
+++ b/AIpaca_App/AIpaca_App.csproj
@@ -82,6 +82,7 @@
 	<ItemGroup>
 	  <None Remove="Properties\ApiConfig.xml" />
 	  <None Remove="Resources\AppIcon\icon_aipaca.png" />
+	  <None Remove="Resources\Config\ApiConfig.example.xml" />
 	  <None Remove="Resources\Config\ApiConfig.xml" />
 	  <None Remove="Resources\data\AchieveList.xml" />
 	  <None Remove="Resources\drawable\icon_aipaca.png" />
@@ -97,6 +98,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <EmbeddedResource Include="Resources\Config\ApiConfig.example.xml" />
 	  <EmbeddedResource Include="Resources\Config\ApiConfig.xml" />
 	  <EmbeddedResource Include="Resources\data\AchieveList.xml" />
 	</ItemGroup>
