--- a/AIpaca_App/AIpaca_App.csproj
+++ b/AIpaca_App/AIpaca_App.csproj
@@ -125,6 +125,9 @@
 	  <Compile Update="Views\AlertPopup.xaml.cs">
 	    <DependentUpon>AlertPopup.xaml</DependentUpon>
 	  </Compile>
+	  <Compile Update="Views\Settings\LogPage.xaml.cs">
+	    <DependentUpon>LogPage.xaml</DependentUpon>
+	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -163,6 +166,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\Settings\LanguageSelectionPopup.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Settings\LogPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
