--- a/AIpaca_App/AIpaca_App.csproj
+++ b/AIpaca_App/AIpaca_App.csproj
@@ -67,7 +67,6 @@
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
-		<MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" />
 		<MauiImage Update="Resources\Images\logo_aipaca.png">
 		  <Color>#a0e2ff</Color>
 		</MauiImage>
@@ -86,7 +85,6 @@
 	  <None Remove="Resources\Config\ApiConfig.xml" />
 	  <None Remove="Resources\data\AchieveList.xml" />
 	  <None Remove="Resources\drawable\icon_aipaca.png" />
-	  <None Remove="Resources\Images\icon_right_arrow.png" />
 	  <None Remove="Resources\Images\logo_aipaca.png" />
 	  <None Remove="Resources\Images\logo_logo_aipaca.png" />
 	  <None Remove="Resources\Images\nav_challenge.png" />
@@ -94,6 +92,8 @@
 	  <None Remove="Resources\Images\nav_record.png" />
 	  <None Remove="Resources\Images\nav_robot.png" />
 	  <None Remove="Resources\Images\nav_settings.png" />
+	  <None Remove="Resources\Images\setting_error.png" />
+	  <None Remove="Resources\Images\setting_right_arrow.png" />
 	  <None Remove="Resources\Splash\icon_aipaca.png" />
 	</ItemGroup>
 
