RecordPage 새로고침 기능 수정, 수동 업데이트 추가

--- a/AIpaca_App/AIpaca_App.csproj
+++ b/AIpaca_App/AIpaca_App.csproj
@@ -104,6 +104,7 @@
 	  <None Remove="Resources\Images\setting_lowspecmode.png" />
 	  <None Remove="Resources\Images\setting_right_arrow.png" />
 	  <None Remove="Resources\Images\setting_signup.png" />
+	  <None Remove="Resources\Images\Setting_update.png" />
 	  <None Remove="Resources\Images\setting_version.png" />
 	  <None Remove="Resources\Splash\icon_aipaca.png" />
 	</ItemGroup>
