--- a/AIpaca_App/AIpaca_App.csproj
+++ b/AIpaca_App/AIpaca_App.csproj
@@ -96,12 +96,14 @@
 	  <None Remove="Resources\Images\nav_robot.png" />
 	  <None Remove="Resources\Images\nav_settings.png" />
 	  <None Remove="Resources\Images\setting_api.png" />
+	  <None Remove="Resources\Images\setting_backup.png" />
 	  <None Remove="Resources\Images\setting_darkmode.png" />
 	  <None Remove="Resources\Images\setting_error.png" />
 	  <None Remove="Resources\Images\setting_language.png" />
 	  <None Remove="Resources\Images\setting_login.png" />
 	  <None Remove="Resources\Images\setting_logout.png" />
 	  <None Remove="Resources\Images\setting_lowspecmode.png" />
+	  <None Remove="Resources\Images\setting_ping.png" />
 	  <None Remove="Resources\Images\setting_right_arrow.png" />
 	  <None Remove="Resources\Images\setting_signup.png" />
 	  <None Remove="Resources\Images\Setting_update.png" />
