--- a/AIpaca_App/AIpaca_App.csproj
+++ b/AIpaca_App/AIpaca_App.csproj
@@ -96,6 +96,7 @@
 	  <None Remove="Resources\Images\nav_robot.png" />
 	  <None Remove="Resources\Images\nav_settings.png" />
 	  <None Remove="Resources\Images\setting_api.png" />
+	  <None Remove="Resources\Images\setting_apikey.png" />
 	  <None Remove="Resources\Images\setting_backup.png" />
 	  <None Remove="Resources\Images\setting_darkmode.png" />
 	  <None Remove="Resources\Images\setting_error.png" />
@@ -174,6 +175,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\SettingsPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Settings\ApiCreatePopup.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\Settings\ApiSettingPopup.xaml">
