라이브러리 버전 수정

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ AIpaca_App/bin/
 
 AIpaca_App/obj/
 
+AIpaca_App/Properties/PublishProfiles/
+
 AIpaca_App/Resources/Config/ApiConfig.xml
 
 AIpaca_App/aipaca.keystore
