--- a/AIpaca_App/AIpaca_App.csproj
+++ b/AIpaca_App/AIpaca_App.csproj
@@ -44,7 +44,7 @@
 	  <AndroidSigningStorePass>blacktime</AndroidSigningStorePass>
 	  <AndroidSigningKeyAlias>aipaca</AndroidSigningKeyAlias>
 	  <AndroidSigningKeyPass>blackshow</AndroidSigningKeyPass>
-	  <Debugger>Native</Debugger>
+	  <Debugger>Xamarin</Debugger>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0-android|AnyCPU'">
@@ -53,7 +53,7 @@
 	  <AndroidSigningKeyAlias>aipaca</AndroidSigningKeyAlias>
 	  <AndroidSigningKeyPass>blackshow</AndroidSigningKeyPass>
 	  <DebugSymbols>False</DebugSymbols>
-	  <Debugger>Native</Debugger>
+	  <Debugger>Xamarin</Debugger>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -120,7 +120,6 @@
 
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Maui" Version="8.0.1" />
-		<PackageReference Include="CommunityToolkit.Maui.Core" Version="8.0.1" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.40" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.40" />
