RobotPopup 디자인 수정
이미지 추가, 요소 추가

Converter 주석 추가

--- a/AIpaca_App/AIpaca_App.csproj
+++ b/AIpaca_App/AIpaca_App.csproj
@@ -95,6 +95,8 @@
 	  <None Remove="Resources\Images\nav_record.png" />
 	  <None Remove="Resources\Images\nav_robot.png" />
 	  <None Remove="Resources\Images\nav_settings.png" />
+	  <None Remove="Resources\Images\robotpopup_copy.png" />
+	  <None Remove="Resources\Images\robotpopup_evaluation.png" />
 	  <None Remove="Resources\Images\setting_api.png" />
 	  <None Remove="Resources\Images\setting_apikey.png" />
 	  <None Remove="Resources\Images\setting_backup.png" />
