패키지 정보 입력, 로그인 기능 일부수정
윈도우 플랫폼의 출시를 위한 패키지 정보입력
로그인/회원가입의 email, userid를 id2, id로 변경

--- a/AIpaca_App/AIpaca_App.csproj
+++ b/AIpaca_App/AIpaca_App.csproj
@@ -62,6 +62,7 @@
 	  <DebugSymbols>False</DebugSymbols>
 	  <Debugger>Xamarin</Debugger>
 	  <ApplicationId>com.companyname.aipacaapp</ApplicationId>
+	  <AndroidPackageFormat>apk</AndroidPackageFormat>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-ios|AnyCPU'">
@@ -90,6 +91,7 @@
 
 	<PropertyGroup>
 	  <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net8.0-windows10.0.19041.0</TargetFrameworks>
+	  <DefaultLanguage>ko-kr</DefaultLanguage>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -216,5 +218,20 @@
 
 	<ItemGroup>
 	  <EmbeddedResource Include="Resources\drawable\icon_aipaca.png" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="Resources\Localization\AppResources.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>AppResources.resx</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Update="Resources\Localization\AppResources.resx">
+	    <Generator>ResXFileCodeGenerator</Generator>
+	    <LastGenOutput>AppResources.Designer.cs</LastGenOutput>
+	  </EmbeddedResource>
 	</ItemGroup>
 </Project>
